# cmake-dylib-example

./: CMakeLists.txt  README.md
A/: CMakeLists.txt  preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: main.cpp
